...
        return Scaffold(
          appBar: AppBar(
            title: const Text(
              'MonitoRing: session',
            ),
            leading: IconButton(
              key: const ValueKey('backButton'),
              icon: const BackButtonIcon(),
              onPressed: () {
                Provider.of<RingDataManager>(context, listen: false)
                    .setNewSession(false);
              },
            ),
...
          body: SingleChildScrollView(
            child: Form(
              key: _sessionFormKey,
              child: Column(
                children: [
                  CustomDropdownCountryFormField(
                    key: const ValueKey('country'),
                    countryController: _countryController,
                    placeCodeController: _placeCodeController,
                    txtLabel: 'Country',
                    listValues: countries,
                  ),
                  CustomDropdownButtonFormField(
                    key: const ValueKey('place_code'),
                    controller: _placeCodeController,
                    txtLabel: 'Place code',
                    listValues: countryPlaceCodes,
                    validator:
                        _inputValidator.placeCodeValidator(countryPlaceCodes),
                  ),
                  CustomTextFormField(
                    key: const ValueKey('locality'),
                    controller: _localityController,
                    focusNode: _localityNode,
                    txtLabel: 'Locality name',
                    keyboard: 'text',
                    validator: _inputValidator.localityNameValidator(),
                  ),
                  CustomDatePickerField(
                    key: const ValueKey('date_picker'),
                    controller: _dateController,
                    txtLabel: 'Date',
                    callback: () {
                      pickDate(context);
                    },
                  ),
                  CustomDropdownButtonFormField(
                    key: const ValueKey('date_accuracy'),
                    controller: _accuracyOfDateController,
                    txtLabel: 'Accuracy of date',
                    listValues: accuracyOfDate,
                    validator:
                        _inputValidator.accOfDateValidator(accuracyOfDate),
                  ),
...
                    child: const Text('Current latitude and longitude'),
                  ),
                  Row(
                    children: [
                      Expanded(
                        child: CustomTextFormField(
                          key: const ValueKey('latitude'),
                          controller: _latController,
                          focusNode: _latNode,
                          txtLabel: 'Latitude',
                          keyboard: 'number',
                          validator: _inputValidator.latValidator(),
                        ),
                      ),
                      Expanded(
                        child: CustomTextFormField(
                          key: const ValueKey('longitude'),
                          controller: _lonController,
                          focusNode: _lonNode,
                          txtLabel: 'Longitude',
                          keyboard: 'number',
                          validator: _inputValidator.lonValidator(),
                        ),
                      ),
                    ],
                  ),
                  CustomDropdownButtonFormField(
                    key: const ValueKey('coordinates_accuracy'),
                    controller: _coordAccuracyController,
                    txtLabel: 'Co-ordinates accuracy',
                    listValues: accuracyOfCoordinates,
                    validator:
                        _inputValidator.coordValidator(accuracyOfCoordinates),
                  ),
                  Row(
                    children: [
                      Expanded(
                        child: CustomTimePickerField(
                          key: const ValueKey('start_time'),
                          controller: _startTimeController,
                          txtLabel: 'Start time',
                          callback: () {
                            _startTimeFieldFocus = true;
                            pickTime(context);
                          },
                          validator: _inputValidator.startTimeValidator(),
                        ),
                      ),
                      Expanded(
                        child: CustomTimePickerField(
                          key: const ValueKey('end_time'),
                          controller: _endTimeController,
                          txtLabel: 'End time',
                          callback: () {
                            pickTime(context);
                          },
                          validator: _inputValidator
...

  /// Shows scaffold messenger on successfuly saved session data.
  void listenAddSession() {
    ScaffoldMessenger.of(context).showMaterialBanner(
      MaterialBanner(
        content: const Text(
          'Session data saved',
          style: TextStyle(color: Colors.white),
        ),
        backgroundColor: Colors.brown,
        actions: [
          TextButton(
            onPressed: () {
              context.read<RingDataManager>().setIsSessionAdded(false);
              ScaffoldMessenger.of(context).hideCurrentMaterialBanner();
            },
            child: const Text(
              'Close',
              style: TextStyle(color: Colors.white),
            ),
          ),
        ],
      ),
    );
...
