...
  'CAMBODIA',
  'CAMEROON',
  'CANADA',
  '.',
  'SLOVAKIA',
  '..',
  'UNITED KINGDOM',
  '...',
  'YEMEN',
  'ZAMBIA',
  'ZANZIBAR & PEMBA',
  'ZIMBABWE',
];
...
    'SKZM',
    'SKZV'
  ],
  'UNITED KINGDOM': [
    '',
    'GB--',
    'GBMB',
    'GBMK',
    'GBML',
    'GBMN',
    'GBMO',
    'GBMT',
    'GBMW',
...
