...
  /// A button for skipping onboarding.
  Widget pageActionButtons() {
    return Row(
      mainAxisAlignment: MainAxisAlignment.end,
      children: [
        MaterialButton(
            key: const ValueKey('skipButton'),
            child: const Text('Skip'),
            onPressed: () {
              Provider.of<MonitoRingStateManager>(context, listen: false)
                  .completeOnboarding();
            })
      ],
...
