...
            },
          ),
        ),
        Padding(
          padding: const EdgeInsets.all(8.0),
          child: ListTile(
            key: const ValueKey('logoutTile'),
            title: const Text('Logout'),
            onTap: () {
              Provider.of<ProfileManager>(context, listen: false)
                  .tapOnProfile(false);
              Provider.of<MonitoRingStateManager>(context, listen: false)
                  .logout();
...
